2011-02-01  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocidatetime.c, lib/oci8/datetime.rb: rename
	    the name of the class to binding timestamp with time zone
	    from OCITimestamp to OCITimestampTZ. OCITimestamp will be
	    used for timestamp without time zone.

2011-01-30  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c: fix SEGV which depends on GC order.
	* ext/oci8/oraconf.rb: check Oracle client's cpu type on Solaris as
	    on Linux and Mac OS X. change error messages on Mac OS X to suggest
	    to set RC_ARCHS=x86_64 when mkmf.log contains messages such as
	    'missing required architecture i386 in file.'

2010-12-26  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocinumber.c, lib/oci8/bindtype.rb, test/test_oranumber.rb:
	    add OraNumber#has_decimal_part? and OCI8::BindType::BasicNumberType.

2010-12-14  KUBO Takehiro  <kubo@jiubao.org>
	* dist-files, lib/oci8.rb.in, lib/oci8/.document, lib/oci8/properties.rb:
	    add OCI8.properties to get and set ruby-oci8 global setting.
	* ext/oci8/bind.c, lib/oci8/bindtype.rb: fix NCHAR support and add
	    OCI8.properties[:bind_string_as_nchar] to control charset form (CHAR or NCHAR)
	    when binding string values.
	    See: http://rubyforge.org/forum/forum.php?thread_id=48838&forum_id=1078

2010-12-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/object.c, ext/oci8/bind.c, lib/oci8/object.rb,
	  test/test_object.rb: fix a problem to assign NULL bind value
	    to object type bind variables.
	    (reported by Raimonds Simanovskis)
	* ext/oci8/oraconf.rb: fix for 32-bit ruby compiled on
	    x86_64 linux. (reported by Jason Renschler)
	* ext/oci8/oranumber_util.c, test/test_oranumber.rb:
	    suppress warning: unknown conversion type character 'h' in format

2010-12-04  KUBO Takehiro  <kubo@jiubao.org>
	* VERSION, ext/oci8/encoding.c, ext/oci8/ocihandle.c: change
	    the version number to 2.1.

2010-09-18  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/win32.c: undefine boolean to pass compilation on