@@ -1056,12 +1056,7 @@ VALUE Init_oci8(void)
 
 oci8_svcctx_t *oci8_get_svcctx(VALUE obj)
 {
-    oci8_base_t *base;
-    Check_Handle(obj, cOCI8, base);
-    if (base->type == 0) {
-        rb_raise(eOCIException, "invalid argument %s was freed already.", rb_class2name(CLASS_OF(obj)));
-    }
-    return (oci8_svcctx_t *)base;
+    return (oci8_svcctx_t *)oci8_get_handle(obj, cOCI8);
 }
 
 OCISvcCtx *oci8_get_oci_svcctx(VALUE obj)
